LU-3784 tune2fs: update i_size in ext2fs_file_write()

ext2fs_file_write() needs to update i_size on successful write,
otherwise, ext2fs_file_read() in same open/close cycle will not
be able to read the just written data.

The expect.1 of m_quota test needs be updated accordingly,
because quotacheck now will consume more blocks.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I7ec7d1fcd5e9a355ca0a4399e5e937f853f0a612